# armv5_binaryninja

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  INSTRUCTIONS.md  Makefile  README.md  crash_report_summary.py  pytest.ini
arch_armv5/: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md  arch_armv5.cpp  arch_armv5.h  armv5_firmware.cpp  armv5_firmware.h  il.cpp  test.py
arch_armv5/analysis/: calling_convention_detector.cpp  calling_convention_detector.h  code_data_classifier.h  crypto_detector.cpp  crypto_detector.h  entropy_analyzer.cpp  entropy_analyzer.h  function_detector.cpp  function_detector.h  function_recognizer.cpp  function_recognizer.h  linear_sweep.cpp  linear_sweep.h  prologue_patterns.cpp  prologue_patterns.h  recursive_descent.cpp  recursive_descent.h  region_detector.cpp  region_detector.h  rtos_detector.cpp  rtos_detector.h  signature_recovery.cpp  signature_recovery.h  string_detector.cpp  string_detector.h  structure_detector.cpp  structure_detector.h  switch_resolver.cpp  switch_resolver.h
arch_armv5/analysis/cfg/: call_graph.cpp  call_graph.h  control_flow_graph.cpp  control_flow_graph.h  dominator_tree.cpp  dominator_tree.h
arch_armv5/arch/: arm_common.cpp  armv5_architecture.cpp  armv5_architecture.h
arch_armv5/armv5_disasm/: .gitignore  armv5.c  armv5.h  test.c  test.py
arch_armv5/commands/: scan_commands.cpp  scan_commands.h
arch_armv5/common/: armv5_utils.h
arch_armv5/conventions/: calling_conventions.cpp  calling_conventions.h
arch_armv5/firmware/: firmware_internal.h  firmware_mmu.cpp  firmware_scan_job.cpp  firmware_scan_job.h  firmware_scan_types.h  firmware_scans.cpp  firmware_settings.cpp  firmware_settings.h  firmware_vectors.cpp  firmware_view.cpp  firmware_view.h
arch_armv5/il/: il.cpp  il.h
arch_armv5/recognizers/: function_recognizers.cpp  function_recognizers.h
arch_armv5/relocations/: relocations.cpp  relocations.h
arch_armv5/settings/: action_policy.cpp  action_policy.h  env_config.cpp  env_config.h  plugin_settings.cpp  plugin_settings.h
arch_armv5/thumb_disasm/: README.md  arch_thumb.cpp  disassembler.cpp  disassembler.h  generator.py  il_thumb.cpp  spec.cpp  spec.h  spec.txt  test.py
arch_armv5/workflow/: firmware_workflow.cpp  firmware_workflow.h
arch_armv5_ui/: CMakeLists.txt  plugin.cpp
arch_armv5_ui/sidebar/: armv5_sidebar.cpp  armv5_sidebar.h  armv5_sidebar_type.cpp  armv5_sidebar_type.h
arch_armv5_ui/widgets/: function_detector_widget.cpp  function_detector_widget.h  function_table.cpp  function_table.h  mmu_table.cpp  mmu_table.h  region_detector_widget.cpp  region_detector_widget.h  rtos_table.cpp  rtos_table.h  scan_controls.cpp  scan_controls.h  vector_table.cpp  vector_table.h
arch_armv5_ui/widgets/common/: analysis_widgets.cpp  analysis_widgets.h  armv5_theme.cpp  armv5_theme.h
arch_armv5_ui/widgets/diff/: diff_widget.cpp  diff_widget.h
arch_armv5_ui/widgets/discover/: detection_models.cpp  detection_models.h  discover_widget.cpp  discover_widget.h  function_results_model.cpp  function_results_model.h
arch_armv5_ui/widgets/health/: health_dashboard.cpp  health_dashboard.h
arch_armv5_ui/widgets/security/: security_scanner_widget.cpp  security_scanner_widget.h
docs/: CC.md  MMU.md  arm-vector-table-image-base.md
docs/text/: DDI0100I_fulltext.txt
test/: __init__.py  conftest.py  helpers.py  pytest_status_plugin.py  run_tests.py  test_body_validation.py  test_byte_coverage.py  test_call_target_discovery.py  test_cleanup_diagnostics.py  test_detection_coverage.py  test_firmware_metrics.py  test_function_quality.py  test_jump_tables.py  test_llil.py  test_prologue_detection.py
test/instruction_tests/: test_branch.py  test_coprocessor.py  test_data_processing.py  test_edge_cases.py  test_likely_data.py  test_load_store.py  test_load_store_multiple.py  test_misc.py  test_multiply.py  test_thumb.py  test_vfp.py
